# AI-Ollama-Test-Python

./: README.md  pyproject.toml
app/: app.py  test.py
