[project]
name = "ai-ollama-test-python"
version = "0.1.0"
description = ""
authors = [
    {name = "e.d.gerasin",email = "e.d.gerasin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama (>=0.5.1,<0.6.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
